# simple-kv-store

./: .gitignore  Cargo.toml  README.md  build.rs
src/: kv_client.rs  kv_server.rs
src/protos/: .gitignore  mod.rs  record.rs  record_grpc.rs
src/protos/messages/: record.proto
